ex: moved to arara

--- a/examples/Cake.tex
+++ b/examples/Cake.tex
@@ -1,15 +1,14 @@
+% !TeX program = arara -p generate_examples % | txs:///view-log | txs:///view-pdf "?am).pdf"
 \documentclass{standalone}
 
 \usepackage{tikzmarmots}
-\usepackage{tikzducks}
+\usepackage{tikzlings-addons}
 
 \begin{document}
 
 \begin{tikzpicture}
-	\marmot
-	\begin{scope}[scale=0.7,xshift=9,yshift=18]
-		\duck[invisible,cake=red!50!violet]
-	\end{scope}
+  \marmot
+  \thing[cake=red!50!violet]
 \end{tikzpicture}
 
 \end{document}
