--- a/examples/Crown.tex
+++ b/examples/Crown.tex
@@ -1,12 +1,13 @@
+% !TeX program = arara -p generate_examples % | txs:///view-log | txs:///view-pdf "?am).pdf"
 \documentclass{standalone}
 \usepackage{tikzmarmots}
-\usepackage{tikzducks}
+\usepackage{tikzlings-addons}
 
 \begin{document}
-	
+
 \begin{tikzpicture}
-	\marmot
-	\duck[invisible,crown]
+  \marmot
+  \thing[crown]
 \end{tikzpicture}	
-	
+
 \end{document}
