--- a/tikzmarmots-v1.sty
+++ b/tikzmarmots-v1.sty
@@ -9,7 +9,7 @@
 % https://github.com/samcarter/tikzmarmots
 %
 % Released under the LaTeX Project Public License v1.3c or later
-% See http://www.latex-project.org/lppl.txt
+% See https://www.latex-project.org/lppl.txt
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \ProvidesPackage{tikzmarmots}
