--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -9,7 +9,7 @@
 % https://github.com/samcarter/tikzmarmots
 %
 % Released under the LaTeX Project Public License v1.3c or later
-% See http://www.latex-project.org/lppl.txt
+% See https://www.latex-project.org/lppl.txt
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \ProvidesPackage{tikzmarmots}[2024/04/24 version v2.1 Drawing marmots in TikZ]
